add schedule log